<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">TrueLife</string>
    <string name="title_activity_settings">Settings</string>
    <string name="app_update_available_title">Update Required</string>
    <string name="app_update_available_msg">Since we have made some major changes, you must update the application to continue using it - Thanks for your support</string>
    <string name="missing_permissions">Missing Permissions</string>
    <string name="update_user_profile">Update profile</string>
    <string name="error_mob_country_code">Mobile Number or Country code is missing</string>
    <string name="label_sign_forgot_password" tools:ignore="MissingTranslation">Forgot Password</string>
    <string name="label_sign_reset_password">Reset Password</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_sign_log_in">LOG IN</string>
    <string name="label_sign_submit">SUBMIT</string>
    <string name="label_celebrity_vip_registration">CELEBRITY / VIP REGISTRATION</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="feedback">Feedback</string>
    <string name="choose_email_app">Choose Email App</string>
    <string name="label_log_in">Log In</string>
    <string name="lable_login_password">P a s s w o r d</string>
    <string name="label_sign_up_new">S i g n U p</string>
    <string name="label_first_name_sign_up">F i r s t &#160; N a m e</string>
    <string name="label_last_name_sign_up">L a s t &#160; N a m e / I n i t i a l</string>
    <string name="label_email_sign_up">E m a i l </string>
    <string name="label_email_mobile_sign_in">E - m a i l / P h o n e</string>
    <string name="label_mobile_sign_up">P h o n e</string>
    <string name="label_otp">Enter O T P</string>
    <string name="label_confirm_password_sign_up">C o n f i r m &#160;  P a s s w o r d</string>
    <string name="label_country_sign_up">C o u n t r y</string>
    <string name="label_state_sign_up">S t a t e</string>
    <string name="label_city_down_sign_up">C i t y / T o w n</string>
    <string name="label_pincode_sign_up">P i n &#160;c o d e</string>
    <string name="label_gender_sign_up">G e n d e r</string>
    <string name="label_forgot_password_sing_in">F o r g o t &#160;P a s s w o r d ?</string>
    <string name="label_first_name">First &#160; Name</string>
    <string name="label_last_name">Last &#160; Name</string>
    <string name="label_email">Email</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_country">Country</string>
    <string name="label_state">State</string>
    <string name="label_city">City</string>
    <string name="label_pincode">Pincode</string>
    <string name="label_join">JOIN</string>
    <string name="label_update">UPDATE</string>
    <string name="label_male">Male</string>
    <string name="label_female">Female</string>
    <string name="label_register_terms">I agree to the <u>terms &amp; conditions</u> and</string>
    <string name="label_register_policy"><u>privacy policies</u></string>
    <string name="label_already_signed_up">A l r e a d y &#160; S i g n e d Up? </string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="choose_time_caps">CHOOSE TIME</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="name_caps">NAME</string>
    <string name="no_internet">Oops, No internet connection</string>
    <string name="delete">Delete</string>
    <string name="no_data_found">No Data Found!</string>
    <string name="comments">Comments</string>
    <string name="title_caps">TITLE</string>
    <string name="dismiss">Dismiss</string>
    <string name="steelfish_regular">fonts/steelfish_regular.ttf</string>
    <string name="opensans_bold">fonts/OpenSans_Bold.ttf</string>
    <string name="opensans_extra_bold">fonts/OpenSans_ExtraBold.ttf</string>
    <string name="opensans_semi_bold">fonts/OpenSans_Semibold.ttf</string>
    <string name="opensans_regular">font/opensans_regular</string>
    <string name="calling_heart_normal">fonts/Calling_Heart.ttf</string>
    <string name="label_e_mail_id">E - M a i l I D</string>
    <string name="label_enter_e_mail_id">E n t e r    y o u r    e m a i l - id</string>
    <string name="login_space">L o g i n</string>
    <string name="comming_soon">Coming Soon...</string>
    <string name="label_password">Password</string>
    <string name="alert_message_validation_empty_user_name">Please enter your username</string>
    <string name="alert_message_validation_empty_password">Please enter your password</string>
    <string name="alert_message_validation_empty_current_password">Please enter your current password</string>
    <string name="alert_message_validation_empty_new_password">Please enter your New password</string>
    <string name="alert_message_validation_empty_confirm_password">Please enter your confirm password</string>
    <string name="alert_message_validation_valid_password">Your password should contain at least a minimum of eight characters</string>
    <string name="alert_message_validation_valid_confirm_password">Please enter your confirm password minimum 7 letters</string>
    <string name="alert_message_validation_valid_new_password">Please enter your new password minimum 7 letters</string>
    <string name="alert_message_validation_empty_email">Please enter your email address</string>
    <string name="alert_message_validation_empty_email_or_mobile">Please enter your email address or mobile number</string>
    <string name="alert_message_validation_valid_email">Please enter your valid email address</string>
    <string name="alert_message_validation_valid_mobile">Please enter your valid mobile number</string>
    <string name="alert_message_validation_valid_country_code">Please enter your country code</string>
    <string name="alert_message_validation_empty_first_name">Please enter your first name</string>
    <string name="alert_message_validation_empty_last_name">Please enter your last name</string>
    <string name="alert_message_validation_empty_gender">Please select your gender</string>
    <string name="alert_message_validation_empty_country">Please select your country</string>
    <string name="alert_message_validation_empty_state">Please select your state</string>
    <string name="alert_message_validation_empty_city">Please select your city</string>
    <string name="alert_message_validation_empty_Pincode">Please enter your Pincode</string>
    <string name="alert_message_validation_empty_Pincode_size">Please enter valid Pincode</string>
    <string name="alert_message_validation_empty_Mobile_no">Please enter valid Mobile Number</string>
    <string name="alert_message_validation_empty_agree_terms">Please choose Terms and Policy</string>
    <string name="alert_message_validation_match_confirm_password">Invalid Confirm Password</string>
    <string name="alert_message_validation_confirm_password">Please check your confirm password</string>
    <string name="url_terms">http://www.truelife.in/termsconditions</string>
    <string name="url_privacy">http://www.truelife.in/privacy</string>
    <string name="label_search">  Search</string>
    <string name="labe_share_thoughts">Share your thoughts...</string>
    <string name="labe_add_photo_video">Add Photo / Video</string>
    <string name="labe_where_do_you_want_to_post">Where do you want to post?</string>
    <string name="labe_post"> Post</string>
    <string name="labe_posts"> Posts</string>
    <string name="lable_spinner_select">- select one -</string>
    <string name="labe_your_club">Your Clubs</string>
    <string name="labe_select_club">select club(s)  </string>
    <string name="label_loading">Loading…</string>
    <string name="label_chat_search">Search people...</string>
    <string name="label_search_result">Search Result(s)</string>
    <string name="label_share_post">Share Now</string>
    <string name="label_share_public">Public</string>
    <string name="label_share_friends">Friends</string>
    <string name="label_share_club">Club</string>
    <string name="label_share">Share</string>
    <string name="label_share_other_app">Share to Other apps</string>
    <string name="menu_label_choose_an_option">Choose An Option</string>
    <string name="menu_label_features">Several features are available in True Life to keep you \n informed and entertained</string>
    <string name="label_autograph">Autograph</string>
    <string name="label_raise_an_issue">Raise an issue</string>
    <string name="label_cinema">Cinema</string>
    <string name="label_moments">Moments</string>
    <string name="label_profile">Profile</string>
    <string name="label_settings">Settings</string>
    <string name="label_acc_settings">ACCOUNT SETTINGS</string>
    <string name="label_profile_settings">PROFILE SETTINGS</string>
    <string name="label_personal_settings">PERSONAL SETTINGS</string>
    <string name="label_privacy_settings">PRIVACY SETTINGS</string>
    <string name="label_your_followers">YOUR FOLLOWERS</string>
    <string name="label_abut_life">ABOUT TRUE LIFE</string>
    <string name="label_blck_List">BLOCK LIST</string>
    <string name="label_report_problem">REPORT A PROBLEM</string>
    <string name="label_logout">LOGOUT</string>
    <string name="label_delete_acc">DELETE ACCOUNT</string>
    <string name="upload_profile_picture">UPLOAD PROFILE PICTURE</string>
    <string name="assign_club_rights_for_members">ASSIGN CLUB RIGHTS FOR MEMBERS</string>
    <string name="open_to_eveyone_forever">Open to Eveyone Forever</string>
    <string name="approval_by_the_administrator">Approval by the administrator after\nthe club reaches a certain number of members\nPlease set the maximum number</string>
    <string name="only_through_the_approval">Only through the approval of the administrator right from the start</string>
    <string name="invite_only_the_people_you_want_to">Invite only the people you want</string>
    <string name="acc_settings_description">Password,E-Mail, \nMobile Number and \nother details</string>
    <string name="profile_settings_description">Occupation, Date of \nbirth, Education, and \nother details</string>
    <string name="personal_settings_description">Details of your address </string>
    <string name="privacy_settings_description">Preferences on profile, \npost and comments \nprivacy </string>
    <string name="your_followers_description">List of all \nyours followers </string>
    <string name="abut_life_description">About the company \nand the app </string>
    <string name="blck_List_description">List of the people \nyou have blocked</string>
    <string name="report_problem_description">Register your \ncomplaints if any,\nthrough here</string>
    <string name="label_logout_description">Only if necessary</string>
    <string name="label_clubs_you_re_in">CLUBS \nYOU\'RE IN</string>
    <string name="label_clubs_by_you">CLUBS \nBY YOU</string>
    <string name="label_create_a_clubs">CREATE \nA CLUB</string>
    <string name="label_no_followers_friends">No Followers friends found </string>
    <string name="privacy_screen_content">Anyone can choose to \n follow you, but they can only \n view your public  posts</string>
    <string name="label_club_suggestion"> Club Suggestions </string>
    <string name="label_no_club_suggestion">No Club Suggestions </string>
    <string name="label_club_no_feed_found">No posts yet</string>
    <string name="label_add_invite_member">ADD/INVITE MEMBERS</string>
    <string name="label_choose_general_public_friends_contact"> Here you can invite general public \n friends of friends and add your \n friends/contacts to the club </string>
    <string name="label_general_public"> GENERAL PUBLIC</string>
    <string name="label_friends_contact"> FRIENDS &amp; CONTACTS </string>
</resources>