<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/inflate_settings_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:layout_weight="1"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="0dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/settings_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"

            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/ic_profile" />

        <TextView
            android:id="@+id/general_public_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"

            android:layout_marginTop="5dp"
            android:fontFamily="@string/opensans_bold"
            android:gravity="center"
            android:text="Logout"
            android:textColor="@color/black"
            android:textSize="@dimen/font_14"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/general_public_member_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@string/opensans_regular"
            android:gravity="center"
            android:text="5 Members"
            android:textColor="@color/black"
            android:textSize="@dimen/font12"
            android:textStyle="normal" />

    </LinearLayout>

</androidx.cardview.widget.CardView>

