<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_crate_club_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/club_by_you_more_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <ImageButton
                        android:id="@+id/close_club_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:background="@null"
                        android:contentDescription="@null"
                        android:padding="5dp"
                        android:src="@drawable/ic_close_without_circle"
                        android:tint="@color/white" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:src="@drawable/add_invite" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@string/opensans_bold"
                    android:gravity="center"
                    android:text="@string/label_add_invite_member"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font16"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@string/opensans_regular"
                    android:gravity="center"
                    android:text="@string/label_choose_general_public_friends_contact"
                    android:textColor="@color/white"
                    android:textStyle="normal" />


                <Button
                    android:id="@+id/add_invite_general_public_btn"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="bottom|center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_round_corner"
                    android:fontFamily="@string/opensans_regular"
                    android:gravity="center"
                    android:text="@string/label_general_public"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="normal" />


                <Button
                    android:id="@+id/add_invite_friends_contact_btn"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_gravity="bottom|center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/bg_round_corner"
                    android:fontFamily="@string/opensans_regular"
                    android:gravity="center"
                    android:text="@string/label_friends_contact"
                    android:textAllCaps="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="normal" />


            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>