<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen10"
        android:background="@color/white"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/clubs_ur_in_lay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen_80"
                android:layout_height="@dimen/dimen_80"
                android:layout_gravity="center"
                android:src="@drawable/clubs_main_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen5"
                android:fontFamily="@font/opensans_semibold"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/label_clubs_you_re_in"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/font12"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/club_by_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen_80"
                android:layout_height="@dimen/dimen_80"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:src="@drawable/clubs_friend_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen5"
                android:fontFamily="@font/opensans_semibold"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/label_clubs_by_you"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/font12"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/create_club_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_weight="1"
            android:orientation="vertical">


            <ImageView
                android:layout_width="@dimen/dimen_80"
                android:layout_height="@dimen/dimen_80"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:src="@drawable/clubs_create_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen5"
                android:fontFamily="@font/opensans_semibold"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/label_create_a_clubs"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/font12"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


    <View
        android:layout_width="fill_parent"
        android:layout_height="0.75dp"
        android:layout_margin="@dimen/dimen_15"
        android:background="@color/app_gray"
        android:visibility="visible" />


    <TextView
        android:id="@+id/clug_suggestion_TET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_semibold"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:text="@string/label_club_suggestion"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        android:textStyle="bold"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/no_found_clug_suggestion_TET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/opensans_semibold"
            android:gravity="center"
            android:paddingStart="15dp"
            android:layout_centerInParent="true"
            android:paddingEnd="10dp"
            android:text="@string/label_no_club_suggestion"
            android:textColor="@color/app_gray_dark"
            android:textSize="@dimen/font16"
            android:textStyle="normal"
            android:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/club_suggestion_RCY"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/opensans_semibold"
            android:orientation="horizontal"
            android:padding="8dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:visibility="invisible" />

    </RelativeLayout>


    <TextView
        android:id="@+id/no_found_clug_feedList_TET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen10"
        android:fontFamily="@font/opensans_semibold"
        android:gravity="center"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:text="@string/label_club_no_feed_found"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18"
        android:textStyle="normal"

        android:visibility="gone" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.75dp"
        android:layout_marginStart="@dimen/dimen10"
        android:layout_marginTop="@dimen/dimen10"
        android:layout_marginEnd="@dimen/dimen10"
        android:background="@color/app_gray"
        android:visibility="visible" />


</LinearLayout>

